2004-12-09 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/script.cpp:  Consistently use
	js_::script::sfnode_class.

2004-12-09 Braden McDaniel  <braden@endoframe.com>

	Fixes for direct output from Script nodes.

	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/script.h

2004-12-07 Braden McDaniel  <braden@endoframe.com>

	Favor private virtual functions in openvrml::script.

	* src/libopenvrml/openvrml/ScriptJDK.cpp
	* src/libopenvrml/openvrml/ScriptJDK.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/script.h

2004-12-06 Braden McDaniel  <braden@endoframe.com>

	Added event_listener::type to get a the type_id for the type
	accepted by the listener. This required adding a static type
	identifier to each field_value subclass.

	* src/libopenvrml/openvrml/event.cpp
	* src/libopenvrml/openvrml/event.h
	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/field_value.h

2004-12-03 Braden McDaniel  <braden@endoframe.com>

	Changed the names of the options to disable ImageTexture and
	Text node rendering to reflect the fact that only rendering is
	being disabled.

	* README
	* configure.ac
	* src/libopenvrml/openvrml/img.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp

2004-12-03 Braden McDaniel  <braden@endoframe.com>

	Merged changes from 0.15.2 release.

	* NEWS
	* README:  Note dependency on DejaGnu.
	* configure.ac:  Added --disable-test option for configure.
	Check for dejagnu.h, and fail configuration if it is not found
	and the tests are supposed to be built.
	* openvrml.spec.in:  Use %makeinstall macro; install COPYING
	(GPL) with lookat documentation rather than COPYING.LESSER
	(LGPL).  Added dejagnu as a build prerequisite.
	* doc/Makefile.am:  Remove generated documentation as part of
	maintainer-clean.
	* mozilla-plugin/src/gtkvrml/vrmlbrowser.cc
	(gtk_vrml_browser_get_type):  First try to look up the type from
	glib's type registry.